# zapp

./: CHANGELOG.md  Cargo.toml  README.md  pixi.toml  pyproject.toml
.github/workflows/: release.yml  release.yml.orig  semantic_release.yml
_python/: __init__.py  root_level.py
_python/submodule/: __init__.py  example.py
_python/subpackage_1/: mod.py
_python/subpackage_2/: mod.py
src/: entry.rs  lib.rs  main.rs  operations.rs
src/api_generator/: api_generator_visitor.rs  mod.rs  visitor.rs
src/api_generator/tests/: mod.rs  test_api_generator.rs  test_api_generator__functions.rs  test_api_generator_classes.rs  test_api_generator_functions.rs
src/libs/: mod.rs
src/libs/api_generator/: api_generator_visitor.rs
src/libs/calculator/: mod.rs  operations.rs
src/libs/calculator/tests/: operation_tests.rs
src/libs/python_file_system/: api_generator_visitor.rs  errors.rs  mod.rs  recurse.rs  source_file.rs
src/libs/python_file_system/tests/: test_registered_visitors.rs  test_walk.rs  (+1 more)
src/libs/tree/: api_file.rs  api_generator_visitor.rs  directory.rs  errors.rs  factory.rs  file.rs  interface.rs  mod.rs  recurse.rs  source_file.rs  walk.rs
src/python_file_system/: api_file.rs  directory.rs  errors.rs  factory.rs  interface.rs  recurse.rs
src/python_file_system/tests/: mod.rs  test_python_file_system.rs  test_registered_visitors.rs  test_walk.rs  visiting_file_tree_fixture.rs
src/ruff_formatter/: visitor.rs
src/test_helpers/: fixtures.rs
src/tests/: test_zapp.rs
tests/: integration_test.rs  operation_tests.rs  simple_tests.rs
(+6 files in other folders)
