[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "zapp"
version = "0.1.0"

[tool.maturin]
bindings = "bin"

[tool.semantic_release]
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version:nf",
    "pixi.toml:project.version:nf",
    "Cargo.toml:package.version:nf",
]
branch = "main"
